# greenhouse

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  README.md  gunicorn.conf.py  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  tests.yml
alembic/: env.py
alembic/versions/: b4fe940ec546_add_emote_table.py
docker-compose/: db.yml  max_conns.sql  web.yml
docs/: conf.py  index.rst  spelling_wordlist.txt  spelling_wordlist.txt.license
docs/contributing/: commit-format.rst  documentation.rst  getting-started.rst  release-process.rst  test-suite.rst  updating-dependencies.rst
docs/how-to-guides/: deploy-docker-compose.rst  deploy-manual.rst
docs/reference/: config.rst
greenhouse/: __init__.py  alembic.ini
greenhouse/alembic/: env.py
greenhouse/alembic/versions/: 5d297d312071_add_twitch_id.py  6ccd537ba27e_.py  778d6aa05318_remove_password.py  a5e2e3e88abd_.py  be1bc414365a_remove_large_binary_from_emote_model_.py  d386c84f76ee_.py
greenhouse/api/: .gitignore  app.py  users.py
greenhouse/api/db/: db_setup.py  models.py
greenhouse/api/postgres/: app.py  emote_router.py  user_router.py
greenhouse/api/postgres/db/: db_setup.py  env.py  models.py
greenhouse/api/postgres/pydantic_schemas/: emotes.py
greenhouse/api/postgres/utilities/: emotes.py  users.py
greenhouse/api/pydantic_schemas/: emote.py  users.py
greenhouse/api/utilities/: users.py
greenhouse/web/: .gitignore  __init__.py  __main__.py  asgi.py  db.py  routes.py
greenhouse/web/methods/: auth.py  db.py
greenhouse/web/static/: style.css  style.scss
greenhouse/web/templates/: authcode.html  authimplicit.html  base.html  dashboard.html  index.html  login.html  top-emotes.html  upload.html
