# SPDX-FileCopyrightText: 2023 peepo.world developers
#
# SPDX-License-Identifier: EUPL-1.2

[build-system]
requires = ['flit-core >= 3.4']
build-backend = 'flit_core.buildapi'

[project]
name = 'greenhouse'
version = '0.0.0'
description = 'The web app behind peepo.world.'
readme = 'README.md'
requires-python = '>= 3.7'
license = {file = 'LICENSES/EUPL-1.2.txt'}
authors = [
  { name = 'Filipe Laíns', email = 'lains@riseup.net' },
]

dependencies = [
  'starlette>=0.25.0',
  'gino>=1.0',
  'jinja2>=3.1.2',
]

[project.optional-dependencies]
serve = [
  'uvicorn>=0.20.0',
  'gunicorn>=20.1.0',
]
docs = [
  'furo>=2021.08.31',
  'sphinx~=4.0',
  'sphinx-copybutton>=0.5.0',
  'sphinx-design>=0.1.0',
  'sphinx-autobuild',
  'sphinxcontrib-spelling>=7.0.0',
  'sphinxext-opengraph>=0.7.0',
]

[project.urls]
homepage = 'https://github.com/peepo.world/greenhouse'

[tool.ruff]
line-length = 127
select = [
  'B',       # flake8-bugbear
  'C4',      # flake8-comprehensions
  'C9',      # mccabe
  'E',       # pycodestyle
  'F',       # pyflakes
  'W',       # pycodestyle
  'RUF100',  # ruff
]

[tool.ruff.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
strict = true
